SERVER-31514 startSteadyStateReplication outside mutex and handle shutdown in repl external state.